<package format="2">
  <name>ur5e_robotiq</name>
  <version>0.0.1</version>
  <description>
    ur5e_robotiq
  </description>

  <maintainer email="ruichao.wu@ipa.fraunhofer.de">ruichao</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ur5e_robotiq_description</exec_depend>
  <exec_depend>ur5e_robotiq_gazebo</exec_depend>
  <exec_depend>ur5e_robotiq_moveit_config</exec_depend>
  <exec_depend>ur5e_robotiq_webots</exec_depend>
  <exec_depend>robotiq_85_description</exec_depend>
  <exec_depend>universal_robot</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
