<?xml version="1.0"?>
<package format="2">
  <name>ur5e_robotiq_description</name>
  <version>1.2.1</version>
  <description>
      URDF description for Universal robot arm with robotiq gripper
  </description>

  <maintainer email="ruichao.wu@ipa.fraunhofer.de">ruichao</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>robotiq_85_description</exec_depend>


  <export>
  </export>
</package>
