<?xml version="1.0"?>
<package format="2">
  <name>ur5e_robotiq_gazebo</name>
  <version>1.2.1</version>
  <description>
      Gazebo wrapper for the Universal robot arm with robotiq gripper.
  </description>

  <maintainer email="ruichao.wu@ipa.fraunhofer.de">ruichao</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />  
    <!-- <gazebo_ros gazebo_model_path="${prefix}/meshes" /> -->
  </export>
</package>