<?xml version="1.0"?>
<package format="2">
  <name>ur5e_robotiq_webots</name>
  <version>0.0.0</version>
  <description>The ur5e_robotiq_webots package</description>

  <maintainer email="ruichao.wu@ipa.fraunhofer.de">ruichao</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
  </export>
</package>